# pedon

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug.yml  question.yml
.github/workflows/: documentation.yml  draft-pdf.yml  python-publish.yml  tests.yaml  tests.yml
_api/: modules.html  pedon.html  pedon.plot.html  pedon.soil.html  pedon.soilmodel.html
_sources/: index.md.txt
_sources/_api/: modules.rst.txt  pedon.plot.rst.txt  pedon.rst.txt  pedon.soil.rst.txt  pedon.soilmodel.rst.txt
_sources/examples/: 01_soil_models.ipynb.txt  03_pedotransfer_functions.ipynb.txt  04_hypags.ipynb.txt  05_curve_fitting.ipynb.txt  06_hypags_curvefitting.ipynb.txt  08_modflow.ipynb.txt  09_paper.ipynb.txt  index.md.txt
doc/examples/: 00_pedon_structure.ipynb  01_soil_models.ipynb  02_datasets.ipynb  03_pedotransfer_functions.ipynb  04_curve_fitting.ipynb
docs/: conf.py  index.md
docs/examples/: 00_pedon_structure.ipynb  01_soil_models.ipynb  02_datasets.ipynb  03_pedotransfer_functions.ipynb  04_hypags.ipynb  05_curve_fitting.ipynb  06_hypags_curvefitting.ipynb  07_hysteresis.ipynb  08_modflow.ipynb  09_paper.ipynb  index.md
examples/: 00_pedon_structure.html  00_pedon_structure.ipynb  01_soil_models.html  01_soil_models.ipynb  02_datasets.html  02_datasets.ipynb  03_pedotransfer_functions.html  03_pedotransfer_functions.ipynb  04_curve_fitting.html  04_curve_fitting.ipynb  04_hypags.html  04_hypags.ipynb  05_curve_fitting.html  05_curve_fitting.ipynb  06_hypags_curvefitting.html  06_hypags_curvefitting.ipynb  07_hysteresis.html  07_hysteresis.ipynb  08_modflow.html  09_paper.html  09_paper.ipynb  index.html
paper/: paper.bib  paper.ipynb  paper.md
paper/jats/: paper.jats
src/pedon/: __init__.py  _params.py  _typing.py  _version.py  pedotransfer.py  plot.py  soil.py  soildata.py  soilmodel.py
src/pedon/datasets/: Brooks.csv  Genuchten.csv  Soil_Parameters.xlsx  Staring_2001.xlsx  Staring_2018.xlsx  soilsamples.csv
tests/: conftest.py  test_burdine.py  test_converter.py  test_datasets.py  test_fit.py  test_hypags.py  test_params.py  test_plots.py  test_ptf.py  test_retc_compare.py  test_soilmodel.py  test_version.py
tests/baseline_images/: generate_plot_baselines.py
